--- a/src/components/Header/MovingCircle.css
+++ b/src/components/Header/MovingCircle.css
@@ -5,6 +5,8 @@
     font-size: 20px;
     animation: rotateText 10s linear infinite;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: #3b3834;
 
   }
   
@@ -24,3 +26,14 @@
     }
   }
   
+  @media (max-width: 768px) {
+    #text {
+      
+      width: 150px;
+      height: 150px;
+      font-size:20px;
+      font-weight: bold;
+    }
+
+   
+  }
