--- a/src/components/Header/MovingCircle.css
+++ b/src/components/Header/MovingCircle.css
@@ -3,13 +3,17 @@
     width: 200px; /* Adjust as needed */
     height: 200px; /* Adjust as needed */
     font-size: 20px;
-    animation: rotateText 10s linear infinite;
+    animation: rotateText 8s linear infinite;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: #3b3834;
 
   }
-  
+
+  #text:hover{
+    animation: rotateText 2.5s linear infinite;
+
+  }
   #text span {
     position: absolute;
     top: 50%;
