--- a/src/components/Header/MovingCircle.css
+++ b/src/components/Header/MovingCircle.css
@@ -11,7 +11,8 @@
   }
 
   #text:hover{
-    animation: rotateText 2.5s linear infinite;
+    animation: hoverAnimation 3s linear infinite;
+ 
 
   }
   #text span {
@@ -28,6 +29,16 @@
     to {
       transform: rotate(360deg);
     }
+  }
+
+  @keyframes hoverAnimation {
+    from {
+      transform: rotate(360deg);
+    }
+    to {
+      transform: rotate(0deg);
+    }
+    
   }
   
   @media (max-width: 768px) {
