--- a/src/index.css
+++ b/src/index.css
@@ -24,5 +24,9 @@
       /* Adjust opacity of the grain texture */
       opacity: 0.5; /* Adjust as needed */
     }
+
+    .bento{
+      @apply  rounded-[40px] bg-red-300 p-[1px] hover:bg-gradient-to-br hover:from-red-200 hover:via-pink-200 hover:to-yellow-200
+    }
   }
   
