--- a/src/index.css
+++ b/src/index.css
@@ -42,42 +42,50 @@
     }
 
    
-    .btn {
-      position: relative;
-      background-color: transparent;
-      border: 2px solid #3498db;
-      color: #3498db;
-      padding: 10px 20px;
-      font-size: 20px;
-      
+    .button {
+      --color:  #353331;
+      font-family: inherit;
+      display: inline-block;
+      width: 6em;
+      height: 2.6em;
+      line-height: 2.5em;
+      overflow: hidden;
       cursor: pointer;
-      overflow: hidden; 
-      height: 40px;
-      border-radius: 50px;
-  }
-  
-  .btn::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%; 
-      height: 100px; 
-      background-color: #3498db;
-      z-index: -1;
-      transition: transform 0.3s; /* Use transform for smoother animation */
-      transform: scaleY(0); /* Initially scale to 0 vertically */
-      transform-origin: bottom; /* Scale from bottom to top */
-  }
-  
-  .btn:hover::before {
-      transform: scaleY(3); /* Scale to 100% vertically on hover */
-  }
-  
-  .btn:hover {
+      margin: 20px;
+      font-size: 17px;
+      z-index: 1;
       color: #fff;
-      
-  }
+      background-color: #5f5c57;
+      margin-top: 0px;
+      border-radius: 50px;
+      position: relative;
+
+    }
+    
+    .button::before {
+      position: absolute;
+      content: "";
+      background: var(--color);
+      width: 150px;
+      height: 200px;
+      z-index: -1;
+      border-radius: 50%;
+    }
+    
+    .button:hover {
+      color: white;
+    }
+    
+    .button:before {
+      top: 100%;
+      left: 100%;
+      transition: 0.3s all;
+    }
+    
+    .button:hover::before {
+      top: -30px;
+      left: -30px;
+    }
   
   
     
