--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,66 @@
       top: -30px;
       left: -30px;
     }
+
+    
+#page3 {
+  min-height: 100vh;
+  width: 100%;
+  background-color: #222;
+  padding: 7vh 5.1vw;
+  position: relative;
+}
+
+#page3>h3 {
+  font-size: 4.8vmax;
+  font-family: gilroy;
+  margin-bottom: 0vmax;
+}
+
+#page3>h3 span {
+  font-size: 4.8vmax;
+  font-family: gilroy;
+  color: #38cdfa;
+}
+
+#page3>h5 {
+  font-size: 2.2vmax;
+  font-family: gilroy;
+  margin-bottom: 1.4vmax;
+
+}
+
+.box h4 {
+  font-size: 2vmax;
+  border: 2px solid white;
+  display: inline-block;
+  font-family: gilroy;
+  color: #fff;
+  font-weight: 500;
+  padding: 6px 14px;
+  border-radius: 7px;
+  margin-top: 4vmax;
+  margin-bottom: 1.6vmax;
+  
+}
+
+
+.box img {
+  height: 5vmax;
+  margin-right: 12px;
+  background-color: #fff;
+  padding: 5px;
+  position: relative;
+  border-radius: 8px;
+  
+}
+
+.des-box img {
+  height: 6vmax;
+  margin-right: 1.4vmax;
+}
+
+
   
   
     
