--- a/src/index.css
+++ b/src/index.css
@@ -98,19 +98,19 @@
 
 #page3>h3 {
   font-size: 4.8vmax;
-  font-family: gilroy;
+  font-family: 'Helvetica';
   margin-bottom: 0vmax;
 }
 
 #page3>h3 span {
   font-size: 4.8vmax;
-  font-family: gilroy;
+  font-family: 'Helvetica';
   color: #38cdfa;
 }
 
 #page3>h5 {
   font-size: 2.2vmax;
-  font-family: gilroy;
+  font-family: 'Helvetica';
   margin-bottom: 1.4vmax;
 
 }
@@ -119,7 +119,7 @@
   font-size: 2vmax;
   border: 2px solid white;
   display: inline-block;
-  font-family: gilroy;
+  font-family: 'Helvetica';
   color: #fff;
   font-weight: 500;
   padding: 6px 14px;
