--- a/src/index.css
+++ b/src/index.css
@@ -142,7 +142,7 @@
 
   #page3>h5 {
       font-size: 2.2vmax;
-      font-family: gilroy;
+      
       font-weight: 500;
       margin-bottom: 1.4vmax;
 
@@ -163,12 +163,15 @@
 
 
   .box img {
-      height: 5.8vmax;
+      height: 100px;
       margin-right: 5px;
       background-color: #fff;
-      padding: 4px;
+      padding: 10px;
+      margin-top: 20px;
+      margin-left: 20px;
       position: relative;
       border-radius: 5px;
+      
   }
 
   .des-box img {
