--- a/src/components/Header/MovingCircle.css
+++ b/src/components/Header/MovingCircle.css
@@ -3,15 +3,26 @@
     width: 200px; /* Adjust as needed */
     height: 200px; /* Adjust as needed */
     font-size: 20px;
-    animation: rotateText 8s linear infinite;
+    animation: rotateText 12s linear infinite;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: #3b3834;
+    
 
   }
 
+  .logo{
+    background: url(./android-chrome-512x512.png);
+    background-size: cover;
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    margin-left: 70px;
+    margin-top: 70px;
+  }
+
   #text:hover{
-    animation: hoverAnimation 3s linear infinite;
+    animation: hoverAnimation 7s linear infinite;
  
 
   }
@@ -48,6 +59,14 @@
       height: 150px;
       font-size:20px;
       font-weight: bold;
+    }
+
+    .logo{
+      
+      width: 60px;
+      height: 60px;
+      margin-left: 45px;
+      margin-top: 45px;
     }
 
    
