--- a/src/components/Animation/ParticlesComponent.css
+++ b/src/components/Animation/ParticlesComponent.css
@@ -12,13 +12,42 @@ body {
   /* ---- particles.js container ---- */
   #particles-js {
     position: absolute;
-    width: 100%;
+   
+     /* Adjust as necessary */
+    overflow: hidden; /* Ensures no overflow */
+    z-index: 0;
+    background-color: #020206;
+}
+
+/* Create left pseudo-element for the background */
+/* #particles-js::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%; 
     height: 100%;
-    background-color: #0b0b0b;
-    background-repeat: no-repeat;
-    background-size: 20%;
-    background-position: 50% 50%;
-  }
+    background: url("../Header/background.png") no-repeat center center / cover;
+    background-color: #000022; 
+    filter: blur(18px); 
+    z-index: -1; 
+} */
+
+/* Create right pseudo-element for the background */
+/* #particles-js::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0; 
+    width: 50%; 
+    height: 100%;
+    background: url("../Header/background.png") no-repeat center center / cover;
+    background-color: #000022; 
+    filter: blur(18px);
+    z-index: -1; 
+} */
+
+
   
   /* ---- stats.js ---- */
   .count-particles {
