--- a/src/components/Header/MovingCircle.css
+++ b/src/components/Header/MovingCircle.css
@@ -6,10 +6,13 @@
     animation: rotateText 12s linear infinite;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    color: #3b3834;
+    color: #FFD500;
     
 
   }
+
+
+  
 
   .logo{
     background: url(./android-chrome-512x512.png);
